# PME

./: .gitignore  DEVELOPMENT.md  PME UI详细设计 v0.1.3.md  PME UI详细设计 v1.0.md  PME UI详细设计.md  PME 数据模型与 Markdown 转换设计文档 v1.0.md  PME-AI功能迭代开发计划.md  PME使用说明书.md  PME（Portable Markdown Editor）产品需求文档PRD.md  README.md  TEST.md  index.html  package-lock.json  package.json  vite.config.js  顽固问题分析与解决.md
.superpowers/sdd/: final-fix-report-2.md  (+23 more)
scripts/: generate-katex-fonts.mjs  serve.mjs
src/: app.mjs  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
tests/: app-command-runner.test.mjs  assets.test.mjs  block-drag-data.test.mjs  clipboard-image.test.mjs  code-block-actions.test.mjs  code-indent.test.mjs  design-system.test.mjs  dialogs.test.mjs  document-link.test.mjs  document-stats.test.mjs  drag-handle.test.mjs  editor-command-runner.test.mjs  editor-menu.test.mjs  editor-popovers.test.mjs  editor-setup.test.mjs  export-runtime.test.mjs  footnote.test.mjs  html-utils.test.mjs  image-resource-loader.test.mjs  image-size.test.mjs  linked-markdown-package.test.mjs  local-image-preview.test.mjs  markdown-link-modal.test.mjs  markdown-package.test.mjs  markdown-shortcuts.test.mjs  markdown.test.mjs  mermaid-node.test.mjs  mindmap-data.test.mjs  mindmap-node.test.mjs  network-image.test.mjs  outline.test.mjs  package-resources.test.mjs  path-utils.test.mjs  pdf-export.test.mjs  recent-workspaces.test.mjs  search.test.mjs  shortcuts.test.mjs  source-mode.test.mjs  startup-screen.test.mjs  tabs.test.mjs  (+6 more)
(+88 files in other folders)
